--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header_container">
 
             <div class="logo">
-                <p>Roop's News Blog</p>
+                <p>Ritika's News Blog</p>
             </div>
 
             <div class="search_ops">
